--- a/bin/Jenkinsfile
+++ b/bin/Jenkinsfile
@@ -2,7 +2,7 @@ pipeline {
     agent any
 
     tools {
-        jdk 'jdk_21' // Specify the JDK version as per your Jenkins configuration
+        jdk 'JDK_17' // Specify the JDK version as per your Jenkins configuration
     }
 
     environment {
